--- a/src/com/dev/dina/proj/client/constants/MyConstants_iw.properties
+++ b/src/com/dev/dina/proj/client/constants/MyConstants_iw.properties
@@ -1,1 +1,1 @@
-﻿exportLbl=שמירהexamineeLbl=הכנס מספר נבדקselectTask=בחר משימהtimerLbl=הזמן שנותר:resultLbl=התוצאה שלך:pointsAddedLbl=נקודות שנוספו:pointsReducedLbl=נקודות שירדו:approveBtn=אישור
+﻿exportLbl=שמירהexamineeLbl=הכנס מספר נבדקselectTask=בחר משימהtimerLbl=הזמן שנותר:resultLbl=התוצאה שלך:pointsAddedLbl=נקודות שנוספו:pointsReducedLbl=נקודות שירדו:approveBtn=אישורcloseBtn=סגור
